--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,4 +1,33 @@
-.habits {
-    flex-direction: column;
-    width: 100%;
+body {
+    background-color: rgb(134, 101, 189);
 }
+
+.habits {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+}
+.habits > div {
+    width: 80%;
+    margin-bottom: 20px;
+}
+
+.row {
+    display: flex;
+    width: 100%;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-around;
+    
+}
+.card {
+    background-color: white;
+    border-radius: 10px;
+}
+.row:hover {
+    -webkit-transition: background .25s; /* For Safari 3.0 to 6.0 */
+        transition: background .25s; /* For modern browsers */
+    background-color: aquamarine;
+}
+
