--- a/client/src/App.css
+++ b/client/src/App.css
@@ -21,6 +21,7 @@ body {
     align-items: center;
     justify-content: space-around; */
   padding: 10px;
+  margin: 10px;
 }
 .card {
   background-color: white;
@@ -51,6 +52,11 @@ h4 {
   width: 0;
   height: 0;
   transition: width 0.5s 0.5s, height 0.5s 0.5s, opacity 0.5s;
+}
+
+.completed {
+    display: flex;
+    justify-content: space-between;
 }
 
 
